# python-hol

./: .coverage  .github-issue-comment-t11.md  .gitignore  CACHE-004-IMPLEMENTATION-SUMMARY.md  CLAUDE.md  DEAD_CODE_AUDIT.md  LIBRARY_DESIGN.md  QUICK_START_RELEASE.md  README.md  T03_DECISION.md  T11-SUMMARY.md  api.py  api_middleware.py  api_models.py  claude_desktop_config_example.json  hybrid_rag_flow.py  jupyter-playground.ipynb  main.py  main_example.py  mcp_server.py  pyproject.toml  test_config_api.py  test_output.txt  test_retrieval_filtering.py  test_ws.py
.claude/: .context-manifest.json  settings.json
.github/: AGENTS.md  copilot-instructions.md
.tours/: architect-overview.tour
ai_support_kb/: chroma.sqlite3
docs/: API_INTEGRATION.md  AUTHENTICATION_AUTHORIZATION.md  CACHE_DEPLOYMENT.md  CACHE_PERF_REPORT.md  CACHING_ARCHITECTURE.md  CACHING_SEQUENCE.md  CHANGELOG.md  DEPLOYMENT_PRODUCTION.md  DOCUMENTATION_INDEX.md  E2E_TESTS_SUMMARY.md  HTTP_ENDPOINT_ALLOWLIST.md  HybridRAG_Architecture.md  LIBRARY_DESIGN.md  MONITORING_OBSERVABILITY.md  PRODUCT_PRD.md  QUICK_START.md  ROLLBACK_RUNBOOK.md  SECURITY_COMPLIANCE.md  T09_MIGRATION_NOTES.md  WS_ONLY_MIGRATION_SUMMARY.md
examples/: hybrid_rag_flow.py  main_example.py
frontend/: AGENTS.md  README.md  SETUP.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
hybrid_rag/: __init__.py  cache.py  cache_utils.py  config.py  constants.py  embeddings.py  exceptions.py  persistence.py  reranker.py  retriever.py  vectordb.py
quality/: AGENTS.md  COMPLETENESS_REPORT.md  QUALITY.md  RUN_CODE_REVIEW.md  RUN_INTEGRATION_TESTS.md  RUN_SPEC_AUDIT.md  test_caching_functional.py
routers/: __init__.py  cache.py  config.py  documents.py  health.py  websocket.py
spec/: mcp-implementation-status.md  spec-infrastructure-mcp-server.md
support_kb/: chroma.sqlite3
tests/: conftest.py  test_api_collections.py  test_api_config_persistence.py  test_api_mcp_endpoints.py  test_api_shared_retrieval.py  test_cache.py  test_cache_integration.py  test_cache_keys.py  test_cache_stats_layered.py  test_caching_functional.py  test_chunk_document.py  test_chunk_text.py  test_collection_utilities.py  test_collection_utils.py  test_collections_cli.py  test_config.py  test_config_persistence.py  test_deprecation_markers.py  test_embedding_cache.py  test_ingestion_paths.py  test_initialize_retriever_startup.py  test_mcp_server.py  test_model_loading.py  test_observability_logs.py  test_optb013_docs_closeout.py  test_query_cache_middleware.py  test_retrieval_filtering.py  test_retrieval_quality_benchmark.py  test_route_allowlist.py  test_system_e2e.py  test_system_resilience.py  test_vectordb_metadata.py  (+4 more)
(+114 files in other folders)
