[project]
name = "python-hol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.86",
    "chromadb>=1.5.7",
    "deepagents>=0.5.1",
    "huggingface-hub>=1.9.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
