[project]
name = "python-hol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.3.0",
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "huggingface-hub>=1.9.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain-core>=1.2.28",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "websockets>=13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
exclude = ["jupyter-playground.ipynb"]
